# Sike

./: CMakeLists.txt  README.md  build.bat
OpenGL/: CMakeLists.txt
OpenGL/include/: game.h  sprite_renderer.h
OpenGL/lib/glad/include/glad/: glad.h
OpenGL/lib/glad/src/: glad.c
OpenGL/shaders/: 2dfshader.cg  2dvshader.cg  3dfshader.cg
OpenGL/src/: vao.cpp
OpenGL/tests/: CMakeLists.txt  test2d.cpp
WebGL/: README.md  index.html
WebGL/scripts/: assets.js  camera.js  collisions.js  controls.js  main.js  shaders.js  texture.js
WebGL/scripts/assets/: cube.js  ground.js  portal.js
WebGL/scripts/utils/: maths.js
include/: camera.cpp  camera.h  game.h  resource_manager.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h  vao.cpp  vao.h  window.cpp  window.h
shaders/: fshader.cg  vshader.cg
src/: 3dtest.cpp  CMakeLists.txt  game.cpp  resource_manager.cpp  sike.cpp  sike_game.cpp  sprite_renderer.cpp  texture.cpp
tests/: 3dtest.cpp  CMakeLists.txt  test3d.cpp
